<?xml version="1.0" encoding="utf-8"?>
<layout   xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="viewModel" type="elisejoffre.lpdream.iut.fr.my_api_project.ui.beers.create.CreateBeerViewModel"/>
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.appcompat.widget.Toolbar
            style="@style/Toolbar"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/create_beer"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/item_margin">

                <ImageView
                    android:id="@+id/imgBeer"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:src="@drawable/beer"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nameLayout"
                    style="@style/TextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:textColorHint="@color/colorAccent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imgBeer">
                    >


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@={viewModel.name}"
                        tools:text="@string/name"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tagLayout"
                    style="@style/TextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tag"
                    android:textColorHint="@color/colorAccent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/nameLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tagEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        tools:text="@string/tag"
                        android:text="@={viewModel.tagline}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/descriptionLayout"
                    style="@style/TextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:textColorHint="@color/colorAccent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tagLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/descriptionEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/description"
                        android:singleLine="true"
                        android:text="@={viewModel.description}" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/food_pairingLayout"
                    style="@style/TextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/food_pairing"
                    android:textColorHint="@color/colorAccent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/descriptionLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/foodPairingEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/food_pairing"
                        android:singleLine="true"
                        android:text="@={viewModel.food_pairing}" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/brewers_tipsLayout"
                    style="@style/TextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/brewers_tips"
                    android:textColorHint="@color/colorAccent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/food_pairingLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/brewers_tipsEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/brewers_tips"
                        android:singleLine="true"
                        android:text="@={viewModel.brewers_tips}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/abvLayout"
                    style="@style/TextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/abv"
                    android:textColorHint="@color/colorAccent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/brewers_tipsLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/abvEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/abv"
                        android:singleLine="true"
                        android:text="@={viewModel.abv}" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/first_brewedLayout"
                        style="@style/TextInput"
                        android:textColorHint="@color/colorAccent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/abvLayout"
                        android:hint="@string/first_brewed">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/first_brewedEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="false"
                        android:cursorVisible="false"
                        tools:text="@string/first_brewed"
                        android:singleLine="true"
                        android:text="@{viewModel.first_brewed}"
                        />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </LinearLayout>

</layout>